<resources>
    <string name="app_name">Slope Manager</string>

    <string name="SHARED_PREFERENCES_KEY">123456789</string>
    <string name="USER_LOGIN_SESSION_KEY">user_login_session_key</string>
    <string name="title_activity_registering">RegisteringActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_logout">Logout</string>

    <string name="login_title">Login</string>
    <string name="dashboard_title">Dashboard</string>

    <string name="login_no_username">Please enter username</string>
    <string name="login_no_password">Please enter a password</string>
    <string name="login_invalid">Invalid username or password</string>

    <string name="password_input_hint">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="requesting_login">Requesting login</string>

    <string name="dashboard_bookings_button_text">My bookings</string>
    <string name="dashboard_personal_details_button_text">Edit My Details</string>
    <string name="dashboard_view_membership_button_text">Become a member</string>

    <string name="login_register_string"><u>Register</u></string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="call_reception_text"><u>Call Reception</u></string>

    <string name="title_activity_bookings">Your Bookings</string>
    <string name="hello_blank_fragment">hello_blank_frag</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_user_type">UserTypeActivity</string>

    <string name="booking_card_instructor">Instructor: %s</string>
    <string name="booking_paid">Paid</string>
    <string name="booking_unpaid">Unpaid</string>

    <string name="dashboard_members_button_text">Check in customer</string>
    <string name="dashboard_slope_schedule_button_text">Slope Schedule</string>
    <string name="dashboard_view_instructors_button_text">View Instructors</string>
    <string name="dashboard_register_user_text">Register User</string>

    <string name="self_bookings_title">Your Bookings</string>
    <string name="title_activity_create_booking">Book A Session</string>
    <string name="no_bookings">No Bookings</string>

    <string name="title_activity_checkin">CheckinActivity</string>

    <string name="no_sessions">No sessions</string>
    <string name="title_activity_view_peoeple_booked">ViewPeoepleBooked</string>
    <string name="title_activity_view_people_booked">ViewPeopleBooked</string>
    <string name="no_instructor">No Instructor</string>
    <string name="with_instructor">With Instructor</string>
    <string name="lifetime_booking_text">Lifetime: %d bookings</string>
    <string name="party_size_text">Party size: %d</string>

    <string name="Select_one">Select one</string>

    <string name="enter_name">Enter name</string>

</resources>
